# parcial_toyotaCorolla

./: .gitignore  README.md  clean_data.ipynb  helpers.py  notebook.ipynb  notebookD.ipynb  pyproject.toml  utils.py
mi_proyecto/: README.md  correlation_matrix.csv  pyproject.toml  pyproject.toml.bk  setup.cfg  setup.py
mi_proyecto/.tmp_dagster_home_1ttg_at7/history/: runs.db
mi_proyecto/.tmp_dagster_home_1ttg_at7/history/runs/: 0deb7f13-41f7-4793-85f8-189da36c40d0.db  448e89ba-cc5f-49bb-aa24-aec6f2c80551.db  527d8834-6a4b-4c04-b8df-39944c36d71f.db  5e82ff35-b804-419e-a609-893b5f9687e3.db  73f7076d-d4fa-4876-a3b4-e94c055c3076.db  77d1ea6e-e16f-4fa8-8ce2-0de3012b5a55.db  8cec2cde-3d87-485e-a890-e31cd9927e85.db  bd29286c-2812-49f8-8413-1c218a845c82.db  c75169f2-bc5c-4968-b74e-12de9287dc5f.db  f709ed66-99dd-4229-9c70-60035e50b4a3.db  index.db
mi_proyecto/.tmp_dagster_home_1ttg_at7/schedules/: schedules.db
mi_proyecto/.tmp_dagster_home_1ttg_at7/storage/: carga_dataset  entrenar_modelo  limpieza
mi_proyecto/mi_proyecto/: definitions.py
mi_proyecto/mi_proyecto/assets/: assets.py
mi_proyecto/mlruns/0/: meta.yaml
mi_proyecto/mlruns/826973415939436523/: meta.yaml
mi_proyecto/mlruns/826973415939436523/3491adbc83904166ba2c7bc1e1b97c40/: meta.yaml
mi_proyecto/mlruns/826973415939436523/47f27bbe9bac424fbd31e5444709837f/: meta.yaml
mi_proyecto/mlruns/826973415939436523/6570fa8400fe475797e14a6d729d1671/: meta.yaml
mi_proyecto/mlruns/826973415939436523/7caa52188c2840acb07cb06821d51e61/: meta.yaml
mi_proyecto/mlruns/826973415939436523/84b1097b41d140dea02b20b1e8f45dd2/: meta.yaml
mi_proyecto/mlruns/826973415939436523/aa27cd0904a44f0bbc7142dd1c2e9107/: meta.yaml
mi_proyecto/mlruns/826973415939436523/af8b704dc9bb4bdbba97aac7d215eef4/: meta.yaml
mi_proyecto/mlruns/826973415939436523/bfbccd6399194f82af7f892fbb13f73d/: meta.yaml
mlartifacts/: features.txt  (+1 more)
(+862 files in other folders)
