[tool.poetry]
name = "parcial-toyotacorolla"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Tobías y Álvaro"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagstermill = "^0.26.17"
papermill = "^2.6.0"
dagster-webserver = "^1.10.18"
statsmodels = "^0.14.4"
mlflow = "^2.22.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "dagster_project"
