[project]
name = "mi_proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "dagster",
    "dagster-cloud",
    "numpy (<1.24)",
    "pandas (>=2.2.3,<3.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "dagster-mlflow (>=0.26.15,<0.27.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "stats (>=0.1.2a0,<0.2.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "mi_proyecto.definitions"
code_location_name = "mi_proyecto"

